--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,18 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
-requests = "*"
-django-heroku = "*"
-gunicorn = "*"
+requests = "==2.20.1"
+django-heroku = "==0.3.1"
+gunicorn = "==19.9.0"
+dj-database-url = "==0.5.0"
+whitenoise = "==4.1.2"
+certifi = "==2018.11.29"
+chardet = "==3.0.4"
+idna = "==2.7"
+"psycopg2" = "==2.7.2"
+pytz = "==2018.7"
+"urllib3" = "==1.24.1"
+Django = "==2.1.4"
 
 [dev-packages]
 
