--- a/Pipfile
+++ b/Pipfile
@@ -12,10 +12,10 @@ whitenoise = "==4.1.2"
 certifi = "==2018.11.29"
 chardet = "==3.0.4"
 idna = "==2.7"
-"psycopg2" = "==2.7.2"
 pytz = "==2018.7"
 "urllib3" = "==1.24.1"
 Django = "==2.1.4"
+"psycopg2" = "*"
 
 [dev-packages]
 
